# CakeDefiAssignment01

./: CMakeLists.txt  README.md  build.sh  build_MingW.bat  build_windows.bat  main.cpp
includes/: APIhandler.h  common_header.h  inputcheck.h  start.h  utils.h
src/: APIhandler.cpp  inputcheck.cpp  start.cpp  utils.cpp
test/: unit_test.bat  unit_test.py  unit_test.sh
